load("@bazel_skylib//lib:selects.bzl", "selects")
load("//bazel:copts.bzl", "COPTS")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "entt",
    hdrs = glob([
        "**/*.h",
        "**/*.hpp",
    ]),
    copts = COPTS,
    defines = ["ENTT_NOEXCEPTION"],
    includes = ["."],
)
